--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/tatskah/calorie-server-node-express#readme",
   "dependencies": {
+    "@sequelize/core": "^7.0.0-alpha.29",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "express": "^4.18.2",
