--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "mdspell **/*.md",
-    "build": "npm run build"
+    "build": "npm rebuild",
+    "start": "nodemon server"
   },
   "repository": {
     "type": "git",
