--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,5 @@
 {
-    "gitConfigUser.selectedProfile": "TaseGit",
+    "gitConfigUser.selectedProfile": "tatskah",
     "gitlens.keymap": "none",
     "vim.digraphs": {
 
