--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "calorie-server-node-express",
   "version": "1.0.0",
   "description": "Calorie program node express backend",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "build": "npm rebuild",
     "start": "nodemon server",
@@ -26,7 +26,7 @@
     "express": "^4.18.2",
     "firebase-admin": "^11.11.0",
     "firebase-functions": "^4.4.1",
-    "helmet": "^7.0.0",
+    "helmet": "^7.1.0",
     "pg": "^8.11.3",
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.33.0"
